--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.6",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
     "next": "15.1.5",
