--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/themes": "^3.1.6",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
+    "lucide-react": "^0.473.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
